# multithreading-for-retards

./: .gitignore  Cargo.toml  README.md
src/: main.rs  make_de_file.rs  try_vec_num_paral.rs
