[package]
name = "multithreading-for-retards"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
rand = "0.8.5"
rayon = "1.5.3"
reqwest = {version = "0.11.12", features = ["blocking"] }
timeit = "0.1.2"
